--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: #f1f5f8;
+  color: #222;
+  justify-content: center;
+  margin-top: 100px;
+}
+.Input {
+  box-shadow: 0px 10px 10px 5px lightblue;
+  display: flex;
+  margin: 2px 2px 2px;
+  flex-direction: column;
+  row-gap: 1rem;
+  margin: auto;
+  width: 50%;
+  border: 0.5px solid black;
+  padding: 70px 30px;
+  text-align: center;
 }
